@@ -1,6 +1,8 @@
 package org.jsoup.nodes;
 
 import org.jsoup.Jsoup;
+import org.jsoup.parser.ParseSettings;
+import org.jsoup.parser.Parser;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -71,5 +73,20 @@ public class AttributeTest {
 
         oldVal = attr.setValue("foo");
         assertEquals("", oldVal); // string, not null
+    }
+
+    @Test void booleanAttributesAreNotCaseSensitive() {
+        // https://github.com/jhy/jsoup/issues/1656
+        assertTrue(Attribute.isBooleanAttribute("required"));
+        assertTrue(Attribute.isBooleanAttribute("REQUIRED"));
+        assertTrue(Attribute.isBooleanAttribute("rEQUIREd"));
+        assertFalse(Attribute.isBooleanAttribute("random string"));
+
+        String html = "<a href=autofocus REQUIRED>One</a>";
+        Document doc = Jsoup.parse(html);
+        assertEquals("<a href=\"autofocus\" required>One</a>", doc.selectFirst("a").outerHtml());
+
+        Document doc2 = Jsoup.parse(html, Parser.htmlParser().settings(ParseSettings.preserveCase));
+        assertEquals("<a href=\"autofocus\" REQUIRED>One</a>", doc2.selectFirst("a").outerHtml());
     }
 }
